--- a/presentation.html
+++ b/presentation.html
@@ -37,24 +37,15 @@
 </header>
 
   <!-- SECTION HISTORIQUE -->
-  <section class="container historique">
-    <section id="localisation" class="carte-historique">
+  <section id="localisation" class="carte-historique">
       <h2 id="historique_title">Historique</h2>
-      <div class="cards-container">
-        <div class="historique-card">
           <div class="slider">
             <img src="img/historique.jpg" alt="Photo historique">
             <img src="img/historique1.jpg" alt="Photo historique1">
             <img src="img/historique2.jpg" alt="Photo historique2">
           </div>
-          <div class="texte-historique">
-            <blockquote id="historique_msg" style="font-style: italic; color: #666; margin: 10px 0 20px 0;">Le Lycée Interdépartemental de Djambala, fondé en [année de création], est un établissement public à vocation régionale, rassemblant des élèves venus de tous les départements du Centre du Congo. Conçu pour répondre aux besoins d’excellence académique, il s’est imposé comme un pôle éducatif de référence au fil des années.
-            </blockquote>
+          <blockquote id="historique_msg" style="font-style: italic; color: #666; margin: 10px 0 20px 0;">Le Lycée Interdépartemental de Djambala, fondé en [année de création], est un établissement public à vocation régionale, rassemblant des élèves venus de tous les départements du Centre du Congo. Conçu pour répondre aux besoins d’excellence académique, il s’est imposé comme un pôle éducatif de référence au fil des années.</blockquote>
             <p class="signature" id="proviseur_nom">— M. Jean Adelard MPAKA, Proviseur</p>
-          </div>
-        </div>
-      </div>
-    </section>
   </section>
 
   <!-- SECTION LOCALISATION -->
