--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lycée Inter-Départemental de Djambala</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="img/favicon.png">
 </head>
 <body>
 
@@ -68,21 +69,21 @@ Car ici, nous croyons qu’un encadrement solide est la base de toute liberté."
       <p id="accueil_msg">Accueil officiel par le proviseur et l’équipe administrative, discours d’ouverture et message d’encouragement, présentation des nouveaux élèves,
 Témoignages : Élève de Terminale, élève de Première, élève de Seconde.
 Perspectives et objectifs pour l’année scolaire</p>
-      <a href="actualites.html#article-ceremonie" class="btn-voir-plus">Lire la suite</a>
+      <a href="actualites.html#article-reception" class="btn-voir-plus">Lire la suite</a>
     </div>
 
     <div class="actualite-card">
       <img src="img/accueil/act2.jpg" alt="Compétition interlycées">
       <h3 id="actu_compete">Compétition inter-lycées : résultats sportifs</h3>
       <p id="compete_msg"> Présentation générale de la compétition, résultats du football : défaite serrée; victoires en Ndzango, gymnastique et course. Témoignages des joueurs et participantes, esprit sportif et perspectives futures</p>
-      <a href="#">Lire la suite</a>
+      <a href="actualites.html#article-competition">Lire la suite</a>
     </div>
 
     <div class="actualite-card">
       <img src="img/accueil/act3.jpg" alt="Sortie sportive à l'aéroport">
       <h3 id="actu_sport">Sortie sportive et visite de l'aéroport de Djambala</h3>
       <p id="sport_msg">Contexte et objectifs de la sortie, activités sportives sur le site de l’aéroport, visite guidée des infrastructures aéroportuaires, interactions avec les professionnels, bilan et impressions des élèves</p>
-      <a href="#">Lire la suite</a>
+      <a href="actualites.html#article-sortie">Lire la suite</a>
     </div>
 
     <div class="actualite-card">
@@ -92,29 +93,29 @@ Perspectives et objectifs pour l’année scolaire</p>
 Anglais: Thématiques adaptées à chaque niveau; Importance de la communication orale en langue étrangère; Évolution de la confiance et des compétences<br>
 Histoire-Géographie: Choix des sujets et supports utilisés; Développement de l’esprit critique et de l’analyse; Impact sur la compréhension du monde contemporain
 </p>
-      <a href="#">Lire la suite</a>
+      <a href="actualites.html#article-expose">Lire la suite</a>
     </div>
 
     <div class="actualite-card">
       <img src="img/accueil/act5.jpg" alt="Fête">
-      <h3>Clôture de la 9e génération et fête d’adieu</h3>
+      <h3>Clôture de la 9e génération</h3>
       <p>Cérémonie officielle de fin d’études; Discours du proviseur et témoignages; Buffet et échanges conviviaux; Engagement des anciens envers le lycée; Perspectives d’avenir</p>
-      <a href="#">Lire la suite</a>
+      <a href="actualites.html#article-g9">Lire la suite</a>
     </div>
 
     <div class="actualite-card">
-      <img src="img/accueil/act6.jpg" alt="Préparation des ONSSUs">
+      <img src="img/accueil/act6.jpg" alt="Conférence">
       <h3>Conférence sur la guerre Russie–Ukraine</h3>
       <p>Présentation de l’intervenant : Monsieur Aimé Madzou Nstiba; Analyse historique et géopolitique du conflit; Intervention de Mékana Padom, élève assistante; Échanges et débat avec les élèves; Importance de l’éducation citoyenne</p>
-      <a href="#">Lire la suite</a>
+      <a href="actualites.html#article-conference">Lire la suite</a>
     </div>
 
     <div class="actualite-card">
-      <img src="img/accueil/act7.jpg" alt="Préparation des ONSSUs">
+      <img src="img/accueil/act7.jpg" alt="Soirée culturelle">
       <h3>Soirée culturelle 2024</h3>
       <p>Défilé de tenues traditionnelles et modernes, activités culturelles (liste des 12 activités) : Danse traditionnelle; Chant et musique; Théâtre et poésie; Arts plastiques et artisanat; Ateliers culinaires, etc. ; Discours et valeurs promues<br>
 Clôture et remerciements</p>
-      <a href="#">Lire la suite</a>
+      <a href="actualites.html#article-soiree">Lire la suite</a>
     </div>
   </div>
 </section>
