--- a/equipe.html
+++ b/equipe.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Présentation - Lycée Interdépartemental de Djambala</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="img/favicon.png">
 </head>
 <body>
 
@@ -35,6 +36,41 @@
     </nav>
   </div>
 </header>
+
+
+<!-- EQUIPE EDUCATIVE -->
+  <section class="container equipe">
+    <section id="equipe" class="carte-equipe">
+      <h2 id="equipe_title">Equipe administrative</h2>
+      <div class="cards-container">
+        <div class="equipe-card">
+          <p id="equipe_msg">L'équipe pédagogique du LIDD est composée d’enseignants expérimentés, engagés dans la transmission des savoirs et le développement des compétences des élèves. Elle est renforcée par le personnel administratif, de vie scolaire et de service.</p>
+        </div>
+      </div>
+    </section>
+  </section>
+
+    <section class="container equipe">
+    <section id="equipe" class="carte-equipe">
+      <h2 id="equipe_title">Equipe pédagogique</h2>
+      <div class="cards-container">
+        <div class="equipe-card">
+          <p id="equipe_msg">L'équipe pédagogique du LIDD est composée d’enseignants expérimentés, engagés dans la transmission des savoirs et le développement des compétences des élèves. Elle est renforcée par le personnel administratif, de vie scolaire et de service.</p>
+        </div>
+      </div>
+    </section>
+  </section>
+
+    <section class="container equipe">
+    <section id="equipe" class="carte-equipe">
+      <h2 id="equipe_title">Service traiteur</h2>
+      <div class="cards-container">
+        <div class="equipe-card">
+          <p id="equipe_msg">L'équipe pédagogique du LIDD est composée d’enseignants expérimentés, engagés dans la transmission des savoirs et le développement des compétences des élèves. Elle est renforcée par le personnel administratif, de vie scolaire et de service.</p>
+        </div>
+      </div>
+    </section>
+  </section>
 
 <div class="settings-panel" id="settings-panel" style="display:none">
   <h3 id="param_title">⚙️ Paramètres</h3>
