--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Contact - Lycée Interdépartemental de Djambala</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="img/favicon.png">
 </head>
 <body>
 
@@ -42,13 +43,14 @@
 
     <div class="contact-info">
       <p><strong>Adresse :</strong> Lycee Inter-Départemental de Djambala, Congo</p>
-      <p><strong>Téléphone :</strong> +242 06 968 65 50</p>
-      <p><strong>Email :</strong> lidd@.cg</p>
+      <p><strong>Téléphone :</strong> +242 06 919 62 66</p>
+      <p><strong>Email :</strong> <a href="lidd@gmail.com">lidd@gmail.com</a></p>
       <p><strong>Réseaux sociaux :</strong></p>
       <ul>
         <li><a href="#">Facebook</a></li>
         <li><a href="#">Instagram</a></li>
         <li><a href="#">YouTube</a></li>
+        <li><a href="#">WhatsApp</a></li>
       </ul>
     </div>
 
