--- a/equipe.html
+++ b/equipe.html
@@ -44,7 +44,7 @@
       <h2 id="equipe_title">Equipe administrative</h2>
       <div class="cards-container">
         <div class="equipe-card">
-          <p id="equipe_msg">L'équipe pédagogique du LIDD est composée d’enseignants expérimentés, engagés dans la transmission des savoirs et le développement des compétences des élèves. Elle est renforcée par le personnel administratif, de vie scolaire et de service.</p>
+          <p id="equipe_msg">Au Lycée Interdépartemental de Djambala, l’excellence repose sur une équipe engagée et dévouée. L’équipe administrative pilote la gestion de l’établissement avec rigueur et bienveillance, assurant la coordination entre élèves, professeurs et parents. Le Proviseur, le Censeur et le Surveillant général forment le socle organisationnel indispensable.</p>
         </div>
       </div>
     </section>
@@ -55,7 +55,7 @@
       <h2 id="equipe_title">Equipe pédagogique</h2>
       <div class="cards-container">
         <div class="equipe-card">
-          <p id="equipe_msg">L'équipe pédagogique du LIDD est composée d’enseignants expérimentés, engagés dans la transmission des savoirs et le développement des compétences des élèves. Elle est renforcée par le personnel administratif, de vie scolaire et de service.</p>
+          <p id="equipe_msg">L’équipe éducative est composée de professeurs passionnés, qui transmettent savoirs et valeurs avec enthousiasme et méthode. Leur mission dépasse la simple transmission : ils accompagnent chaque élève dans son épanouissement personnel et académique.</p>
         </div>
       </div>
     </section>
@@ -66,7 +66,7 @@
       <h2 id="equipe_title">Service traiteur</h2>
       <div class="cards-container">
         <div class="equipe-card">
-          <p id="equipe_msg">L'équipe pédagogique du LIDD est composée d’enseignants expérimentés, engagés dans la transmission des savoirs et le développement des compétences des élèves. Elle est renforcée par le personnel administratif, de vie scolaire et de service.</p>
+          <p id="equipe_msg">Enfin, le service traiteur veille au bien-être de tous grâce à une restauration saine, variée et adaptée aux besoins des jeunes. Les repas sont préparés avec soin, favorisant un moment convivial et ressourçant pour les élèves et le personnel.</p>
         </div>
       </div>
     </section>
