--- a/filieres.html
+++ b/filieres.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Filières - Lycée Interdépartemental de Djambala</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="img/favicon.png">
 </head>
 <body>
 
@@ -39,15 +40,11 @@
   <!-- SECTION FILIÈRES -->
   <section class="container">
     <h2>Filières et Programmes</h2>
-    <p>
-      Le Lycée Interdépartemental de Djambala propose trois grandes séries de formation en cycle terminal : la série A (littéraire), la série C (scientifique), et la série D (biologique). Chaque série prépare les élèves à des parcours universitaires adaptés à leur profil.
-    </p>
+    <p>Le Lycée Interdépartemental de Djambala propose trois grandes séries de formation en cycle terminal : la série A (littéraire), la série C (scientifique), et la série D (biologique). Chaque filière bénéficie d’un encadrement pédagogique dédié pour garantir une formation solide et adaptée aux aspirations des jeunes, tout en les préparant à des parcours universitaires adaptés à leur profil.</p>
 
     <div class="filiere">
       <h3>🅰️ Série A — Littéraire</h3>
-      <p>
-        Cette série met l’accent sur les langues, la littérature, l’histoire, la géographie et la philosophie. Elle forme des esprits critiques et ouverts.
-      </p>
+      <p>Cette filière met l’accent sur les lettres, les langues et les sciences humaines. Les élèves y développent leur esprit critique, leur culture générale et leurs compétences rédactionnelles, préparant ainsi aux carrières dans l’enseignement, le droit, la communication ou les arts.</p>
       <ul>
         <li>Matières dominantes : Français, Anglais, Histoire-Géographie, Philosophie</li>
         <li>Profils adaptés : passionnés d’écriture, sciences humaines, droit, communication</li>
@@ -57,9 +54,7 @@
 
     <div class="filiere">
       <h3>🅲 Série C — Scientifique (Maths-Physique)</h3>
-      <p>
-        Série d’excellence scientifique, elle s’adresse aux élèves aimant les mathématiques et les sciences physiques.
-      </p>
+      <p>Axée sur les mathématiques et les sciences physiques, cette filière forme des élèves rigoureux et analytiques, prêts à poursuivre des études en ingénierie, informatique, mathématiques appliquées ou sciences fondamentales.</p>
       <ul>
         <li>Matières dominantes : Mathématiques, Physique, Chimie</li>
         <li>Profils adaptés : logiques, analytiques, rigoureux</li>
@@ -69,9 +64,7 @@
 
     <div class="filiere">
       <h3>🅳 Série D — Sciences naturelles (Biochimie)</h3>
-      <p>
-        Idéale pour les élèves intéressés par la biologie, la nature, le vivant et la santé.
-      </p>
+      <p>Orientée vers les sciences naturelles, la biologie et la géologie, cette filière ouvre la voie aux carrières médicales, environnementales, agronomiques ou de recherche scientifique.</p>
       <ul>
         <li>Matières dominantes : Biologie, Chimie, Mathématiques</li>
         <li>Profils adaptés : observateurs, méthodiques, attirés par les sciences de la vie</li>
