--- a/index.html
+++ b/index.html
@@ -69,53 +69,49 @@ Car ici, nous croyons qu’un encadrement solide est la base de toute liberté."
       <p id="accueil_msg">Accueil officiel par le proviseur et l’équipe administrative, discours d’ouverture et message d’encouragement, présentation des nouveaux élèves,
 Témoignages : Élève de Terminale, élève de Première, élève de Seconde.
 Perspectives et objectifs pour l’année scolaire</p>
-      <a href="actualites.html#article-reception" class="btn-voir-plus">Lire la suite</a>
+      <a href="actualites.html#article-reception" id="accueil_link" class="btn-voir-plus">Lire la suite</a>
     </div>
 
     <div class="actualite-card">
       <img src="img/accueil/act2.jpg" alt="Compétition interlycées">
-      <h3 id="actu_compete">Compétition inter-lycées : résultats sportifs</h3>
-      <p id="compete_msg"> Présentation générale de la compétition, résultats du football : défaite serrée; victoires en Ndzango, gymnastique et course. Témoignages des joueurs et participantes, esprit sportif et perspectives futures</p>
-      <a href="actualites.html#article-competition">Lire la suite</a>
+      <h3 id="actu_compete">Compétition inter-lycées: Les jeux d'ONSSU</h3>
+      <p id="compete_msg"> Du terrain au podium, les couleurs du lycée ont brillé ! Engagés dans les compétitions d’ONSSU, les élèves du LIDD ont montré que le talent se cultive autant dans les livres que sur les terrains. Une aventure sportive pleine de sueur, d’émotion et de fierté.</p>
+      <a href="actualites.html#article-competition" id="compete_link" class="btn-voir-plus">Lire la suite</a>
     </div>
 
     <div class="actualite-card">
       <img src="img/accueil/act3.jpg" alt="Sortie sportive à l'aéroport">
       <h3 id="actu_sport">Sortie sportive et visite de l'aéroport de Djambala</h3>
-      <p id="sport_msg">Contexte et objectifs de la sortie, activités sportives sur le site de l’aéroport, visite guidée des infrastructures aéroportuaires, interactions avec les professionnels, bilan et impressions des élèves</p>
-      <a href="actualites.html#article-sortie">Lire la suite</a>
+      <p id="sport_msg">Ce jour-là, les élèves ont couru… sur une piste d’avion ! Une sortie unique mêlant sport et découverte de l’aéronautique. De l’effort physique au rêve de voler, les jeunes ont exploré un univers souvent inaccessible, les pieds sur le tarmac, la tête dans les nuages.</p>
+      <a href="actualites.html#article-sortie" id="sortie_link" class="btn-voir-plus">Lire la suite</a>
     </div>
 
     <div class="actualite-card">
       <img src="img/accueil/act4.jpg" alt="Exposés">
-      <h3>Exposés oraux : français, anglais et histoire-géographie</h3>
-      <p>Français: Organisation des exposés par niveau; Sujets abordés et compétences développées; Témoignages d’élèves et retours des enseignants <br>
-Anglais: Thématiques adaptées à chaque niveau; Importance de la communication orale en langue étrangère; Évolution de la confiance et des compétences<br>
-Histoire-Géographie: Choix des sujets et supports utilisés; Développement de l’esprit critique et de l’analyse; Impact sur la compréhension du monde contemporain
-</p>
-      <a href="actualites.html#article-expose">Lire la suite</a>
+      <h3 id="actu_expose">Exposés littéraires</h3>
+      <p id="expose_msg">Des mots, des idées, et une scène pour convaincre... En français, en anglais, en philo ou en géo, les élèves prennent la parole et construisent la pensée. Les exposés sont plus qu’un devoir : ils sont un miroir de ce que l’on devient. </p>
+      <a href="actualites.html#article-expose" id="expose_link" class="btn-voir-plus">Lire la suite</a>
     </div>
 
     <div class="actualite-card">
-      <img src="img/accueil/act5.jpg" alt="Fête">
-      <h3>Clôture de la 9e génération</h3>
-      <p>Cérémonie officielle de fin d’études; Discours du proviseur et témoignages; Buffet et échanges conviviaux; Engagement des anciens envers le lycée; Perspectives d’avenir</p>
-      <a href="actualites.html#article-g9">Lire la suite</a>
+      <img src="img/accueil/act5.jpg" alt="Fête G9">
+      <h3 id="actu_g9">Clôture et départ de la 9e génération</h3>
+      <p id="g9_msg">Ils ont plié les cahiers, mais pas leurs rêves... La neuvième génération (G9) a bouclé son aventure scolaire avec une cérémonie inoubliable, des larmes, des rires, et une dernière nuit de fraternité.</p>
+      <a href="actualites.html#article-g9" id="g9_link" class="btn-voir-plus">Lire la suite</a>
     </div>
 
     <div class="actualite-card">
       <img src="img/accueil/act6.jpg" alt="Conférence">
-      <h3>Conférence sur la guerre Russie–Ukraine</h3>
-      <p>Présentation de l’intervenant : Monsieur Aimé Madzou Nstiba; Analyse historique et géopolitique du conflit; Intervention de Mékana Padom, élève assistante; Échanges et débat avec les élèves; Importance de l’éducation citoyenne</p>
-      <a href="actualites.html#article-conference">Lire la suite</a>
+      <h3 id="actu_conference">Conférence sur la guerre Russie–Ukraine</h3>
+      <p id="conference_msg">Un lycée congolais face à un conflit mondial. En 2022, une conférence, tenue par Monsieur Aimé Madzou Nstiba assisté de Mékana Padom, sur la guerre Russie–Ukraine a ouvert les esprits. Histoire, géopolitique, humanité : les élèves ont découvert que comprendre le monde, c’est déjà le changer.</p>
+      <a href="actualites.html#article-conference" id="conference_link" class="btn-voir-plus">Lire la suite</a>
     </div>
 
     <div class="actualite-card">
       <img src="img/accueil/act7.jpg" alt="Soirée culturelle">
-      <h3>Soirée culturelle 2024</h3>
-      <p>Défilé de tenues traditionnelles et modernes, activités culturelles (liste des 12 activités) : Danse traditionnelle; Chant et musique; Théâtre et poésie; Arts plastiques et artisanat; Ateliers culinaires, etc. ; Discours et valeurs promues<br>
-Clôture et remerciements</p>
-      <a href="actualites.html#article-soiree">Lire la suite</a>
+      <h3 id="actu_soiree">Soirée culturelle 2024</h3>
+      <p id="soiree_msg">Une nuit où l’art a pris la parole. Danse, théâtre, poésie, musique : les élèves ont illuminé la scène. La soirée culturelle 2024 restera comme un éclat de créativité et d’identité.</p>
+      <a href="actualites.html#article-soiree" id="soiree_link" class="btn-voir-plus">Lire la suite</a>
     </div>
   </div>
 </section>
