--- a/presentation.html
+++ b/presentation.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Présentation - Lycée Interdépartemental de Djambala</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="img/favicon.png">
 </head>
 <body>
 
@@ -44,7 +45,7 @@
             <img src="img/historique1.jpg" alt="Photo historique1">
             <img src="img/historique2.jpg" alt="Photo historique2">
           </div>
-          <blockquote id="historique_msg" style="font-style: italic; color: #666; margin: 10px 0 20px 0;">Le Lycée Interdépartemental de Djambala, fondé en [année de création], est un établissement public à vocation régionale, rassemblant des élèves venus de tous les départements du Centre du Congo. Conçu pour répondre aux besoins d’excellence académique, il s’est imposé comme un pôle éducatif de référence au fil des années.</blockquote>
+          <blockquote id="historique_msg" style="font-style: italic; color: #666; margin: 10px 0 20px 0;">Le Lycée Interdépartemental de Djambala, fondé en 2013, est un établissement public à vocation régionale, rassemblant des élèves venus de tous les départements du Congo. Conçu pour répondre aux besoins d’excellence académique, il s’est imposé comme un pôle éducatif de référence au fil des années.</blockquote>
             <p class="signature" id="proviseur_nom">— M. Jean Adelard MPAKA, Proviseur</p>
   </section>
 
@@ -69,7 +70,7 @@
       <h2 id="equipe-educative_title">Équipe éducative</h2>
       <div class="cards-container">
         <div class="equipe-educative-card">
-          <p id="equipe-educative_msg">L'équipe pédagogique du LID est composée d’enseignants expérimentés, engagés dans la transmission des savoirs et le développement des compétences des élèves. Elle est renforcée par le personnel administratif, de vie scolaire et de service.</p>
+          <p id="equipe-educative_msg">L'équipe pédagogique du LIDD est composée d’enseignants expérimentés, engagés dans la transmission des savoirs et le développement des compétences des élèves. Elle est renforcée par le personnel administratif, de vie scolaire et de service.</p>
           
           <a href="equipe.html" class="btn-voir-plus">Voir toute l'équipe</a>
         </div>
@@ -95,6 +96,21 @@
       </div>
     </section>
   </section>
+
+
+  <!-- SECTION RESIDENCE -->
+  <section class="container residence">
+    <section id="residence" class="carte-residence">
+      <h2 id="residence_title">Résidences / Internat</h2>
+      <div class="cards-container">
+        <div class="residence-card">
+          <p id="residence_msg">Le lycée dispose d’un internat mixte conçu pour le confort et la sécurité des élèves, encadré par une équipe éducative vigilante et bienveillante. Les dortoirs sont situés à une courte distance des salles de classe, ce qui facilite les déplacements matin et soir, tout en garantissant un environnement calme et propice au repos. L’internat est organisé avec une séparation stricte entre les dortoirs garçons et filles, qui sont bien entretenus, assurant respect et tranquillité. Chaque dortoir est équipé d’espaces communs et d’un encadrement permanent pour veiller au bien-être des élèves. La vie résidentielle favorise l’autonomie, l’entraide et la rigueur quotidienne. Des activités de cohésion sont organisées chaque mois (soirées à thème, ciné-débats, compétitions internes...).</p>
+        </div>
+      </div>
+    </section>
+  </section>
+
+
 
 <div class="settings-panel" id="settings-panel" style="display:none">
   <h3 id="param_title">⚙️ Paramètres</h3>
