--- a/anciens-eleves.html
+++ b/anciens-eleves.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Anciens Élèves - Lycée Interdépartemental de Djambala</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="img/favicon.png">
 </head>
 <body>
 
